<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnsub"
        android:layout_width="111dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        android:text="@string/txtsub"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btndiv"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="106dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/num_2"
        android:gravity="center"
        android:labelFor="@id/txtnum2"
        android:text="@string/num_2"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toEndOf="@+id/txtnum2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtnum2"
        android:layout_width="190dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:text="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="307dp"
        android:layout_height="113dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/calculator" />

    <EditText
        android:id="@+id/txtnum1"
        android:layout_width="188dp"
        android:layout_height="47dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:text="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="104dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/num_1"
        android:gravity="center"
        android:labelFor="@id/txtnum1"
        android:text="@string/num_1"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toEndOf="@+id/txtnum1"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnAdd6"
        android:layout_width="111dp"
        android:layout_height="54dp"
        android:layout_marginTop="432dp"
        android:text="@string/btnadd"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnmult"
        android:layout_width="111dp"
        android:layout_height="54dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="32dp"
        android:text="@string/btnmult"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum2" />

    <Button
        android:id="@+id/btndiv"
        android:layout_width="112dp"
        android:layout_height="54dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        android:text="@string/btndiv"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnmult"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="284dp"
        android:layout_height="66dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_orange_dark"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>